# multi-agent-ai-care-coordintor

./: LICENSE  README.md  pyproject.toml
src/: pyproject.toml
src/ai_care_coordintor/: __init__.py  crew.py  main.py
src/ai_care_coordintor/config/: agents.yaml  tasks.yaml
src/ai_care_coordintor/tools/: custom_tool.py  tool_helper.py
