[project]
name = "ai_care_coordintor"
version = "0.1.0"
description = "ai_care_coordintor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.1.7",
]

[project.scripts]
ai_care_coordintor = "ai_care_coordintor.main:run"
run_crew = "ai_care_coordintor.main:run"
train = "ai_care_coordintor.main:train"
replay = "ai_care_coordintor.main:replay"
test = "ai_care_coordintor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_care_coordintor"]
